--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -147,7 +147,7 @@
                         android:layout_gravity="bottom|center_horizontal"
                         android:layout_marginTop="5dp"
                         android:layout_marginBottom="5dp"
-                        android:text="Upload New Data"
+                        android:text="Upload File"
                         android:textSize="20sp"
                         android:textStyle="bold" />
                 </LinearLayout>
