--- a/app/src/main/res/layout/activity_display_blood_sugar_chart.xml
+++ b/app/src/main/res/layout/activity_display_blood_sugar_chart.xml
@@ -28,7 +28,7 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Blood Sugar Level Tracking"
+            android:text="Blood Sugar Level"
             android:layout_gravity="bottom|center_horizontal"
             android:layout_marginTop="0dp"
             android:layout_marginBottom="5dp"
